fix horizontal scrolling on wiki

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -80,6 +80,11 @@ blockquote {
   h2 {
     margin-bottom: 0.75rem;
   }
+
+  li, a { // fixes long words and urls causing horizontal scrolling
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+  }
 }
 
 #markdown-toc {
